# xpotato-devkit

./: .gitignore  AGENTS.md  LICENSE  README.ja.md  README.md  devkit.toml  pyproject.toml  pytest_out.txt  pytest_out2.txt  pytest_out_cmd.txt
.github/workflows/: ci.yml  release.yml
SKILLs/devkit-doc-edit/: SKILL.md
SKILLs/devkit-encoding-hygiene/: SKILL.md
SKILLs/devkit-git-drafts/: SKILL.md
SKILLs/devkit-inspect-edit-verify/: SKILL.md
SKILLs/devkit-metrics-review/: SKILL.md
SKILLs/devkit-project-bootstrap/: SKILL.md
SKILLs/devkit-release-maintainer/: SKILL.md
SKILLs/devkit-tree-explore/: SKILL.md
docs/: agent_ergonomics_acceptance.md  ai_token_efficiency.md  architecture.md  devkit_requirements.md  improvement_roadmap.md  rust-parity-matrix.md  xpotato-devkit_improvement_proposal.md
docs/architecture/: workspace-overview.md
docs/benchmarks/: python-vs-rust.md
docs/concepts/: why-devkit.md
docs/design/: ai_agent_workflow.md  architecture.md  cli_color_system.md  command-gap-analysis.md  naming_and_structure.md  output_conventions.md
docs/install/: windows-installation.md  windows-winget-prep.md
docs/legacy/: python-legacy.md
docs/proposals/: ai_agent_improvement_proposal.md  devkit-Windows-Installer.md  devkit_post_implementation_review.md  devkit_rust_migration_execution_plan.md  devkit_rust_migration_test_strategy.md  devkit_rust_public_finish_plan.md  devkit_tag_triggered_release_plan.md  fix_midterm_extension.md  github_actions_node24_and_rust_test_support_plan_2026-04-08.md  windows_installer_gui_path_and_signing_followup_2026-04-08.md  winget_checklist.md
docs/release/: release-process.md  tag-triggered-release.md
docs/reports/: agents_version_policy_update_report_2026-04-09.md  ai_agent_improvement_implementation_report.md  bootstrap_skill_workspace_report_2026-04-11.md  ci_clippy_fix_report.md  ci_env_var_test_race_fix_report_2026-04-08.md  ci_format_fix_report.md  ci_rust_verification_guard_report_2026-04-08.md  ci_test_hardening_report_2026-04-08.md  cli_color_and_skills_update_report_2026-04-09.md  cli_timing_and_windows_scope_report.md  devkit_skill_references_report_2026-04-09.md  devkit_skill_scripts_report_2026-04-09.md  devkit_skill_suite_expansion_report_2026-04-09.md  devkit_skill_ui_metadata_report_2026-04-09.md  fix_midterm_extension_followup_report_2026-04-10.md  fix_midterm_extension_future_work_doc_report_2026-04-10.md  fix_midterm_extension_phase1_report_2026-04-10.md  md_newline_preservation_report_2026-04-21.md  pr17_ci_format_fix_report_2026-04-11.md  readme_bilingual_support_report_2026-04-11.md  release_lockfile_tracking_fix_report.md  release_version_metadata_report_2026-04-09.md  rust_cli_scope_handoff_2026-04-08.md  rust_encoding_check_report_2026-04-08.md  rust_migration_phase0_1_report.md  rust_migration_phase2_report.md  rust_migration_phase3_report.md  rust_migration_phase4_report.md  rust_migration_phase5_report.md  rust_migration_public_finish_report.md  rust_migration_test_results.md  rust_remaining_scope_report_2026-04-08.md  skill_script_repo_root_fix_report_2026-04-11.md  tag_triggered_release_implementation_report.md  token_savings_report.md  (+9 more)
rust/: err.txt  error.txt
rust/crates/devkit-cli/: Cargo.toml
rust/crates/devkit-cli/src/: main.rs
rust/crates/devkit-cli/tests/: cli_smoke.rs
rust/crates/devkit-installer/: Cargo.toml  build.rs
rust/crates/devkit-installer/src/: main.rs  manifest.rs  windows_path.rs
rust/crates/devkit-installer/tests/: e2e.rs
scripts/: bootstrap_devkit.py
tests/: test_ai_efficiency.py  test_bootstrap.py  test_config_and_git.py  test_diff_and_block.py  test_md.py  test_metrics.py  test_smoke.py
(+78 files in other folders)
