[project]
name = "devkit"
version = "0.1.0"
description = "Repo-agnostic CLI utilities for AI-assisted development workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.16.0",
  "rich>=14.0.0",
]

[project.scripts]
devkit-py = "devkit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/devkit"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
