[package]
name = "devkit-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
devkit-block = { version = "0.1.0", path = "../devkit-block" }
devkit-core = { version = "0.1.0", path = "../devkit-core" }
devkit-patch = { version = "0.1.0", path = "../devkit-patch" }
devkit-tree = { version = "0.1.0", path = "../devkit-tree" }
