[package]
name = "devkit-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
devkit-block = { version = "0.1.0", path = "../devkit-block" }
devkit-core = { version = "0.1.0", path = "../devkit-core" }
devkit-git = { version = "0.1.0", path = "../devkit-git" }
devkit-md = { version = "0.1.0", path = "../devkit-md" }
devkit-patch = { version = "0.1.0", path = "../devkit-patch" }
devkit-tree = { version = "0.1.0", path = "../devkit-tree" }
serde_json = "1.0.149"
