[package]
name = "devkit-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
devkit-block = { version = "0.1.0", path = "../devkit-block" }
devkit-bootstrap = { version = "0.1.0", path = "../devkit-bootstrap" }
devkit-core = { version = "0.1.0", path = "../devkit-core" }
devkit-encoding = { version = "0.1.0", path = "../devkit-encoding" }
devkit-git = { version = "0.1.0", path = "../devkit-git" }
devkit-md = { version = "0.1.0", path = "../devkit-md" }
devkit-metrics = { version = "0.1.0", path = "../devkit-metrics" }
devkit-patch = { version = "0.1.0", path = "../devkit-patch" }
devkit-search = { version = "0.1.0", path = "../devkit-search" }
devkit-tree = { version = "0.1.0", path = "../devkit-tree" }
serde_json = "1.0.149"

[[bin]]
name = "devkit"
path = "src/main.rs"
