[package]
name = "devkit-installer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "devkit-installer"
path = "src/main.rs"

[[bin]]
name = "devkit-cleanup-helper"
path = "src/bin/devkit-cleanup-helper.rs"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem"] }
winreg = "0.52.0"
